--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
+  "version": 2,
+  "public": true,
   "functions": {
     "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.php" }
+  "rewrites": [
+    { "source": "/", "destination": "/public/index.html" },
+    { "source": "/api/(.*)", "destination": "/api/$1.php" }
   ]
 }
