--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "version": 2,
-  "public": true,
   "functions": {
     "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
   "rewrites": [
-    { "source": "/", "destination": "/public/index.html" },
-    { "source": "/api/(.*)", "destination": "/api/$1.php" }
+    { "source": "/api/index", "destination": "/api/index.php" },
+    { "source": "/(.*)", "destination": "/public/$1" }
   ]
 }
